# pase00_ultimate-hqc_new

./: .gitignore  CMakeLists.txt  Makefile  README  pase_arnoldi.c  pase_arnoldi.h  pase_aux_matrix.c  pase_aux_matrix.h  pase_aux_vector.c  pase_aux_vector.h  pase_config.h  pase_matrix.c  pase_matrix.h  pase_mg.c  pase_mg.h  pase_mg_solver.c  pase_mg_solver.h  pase_multigrid.c  pase_multigrid.h  pase_param.h  pase_pcg.c  pase_pcg.h  pase_vector.c  pase_vector.h  tags
example/: CMakeLists.txt  example_hypre.c  example_user.c
include/: pase_aux_vector.h  pase_config.h  pase_gcg.h  pase_lobpcg_hypre.h  pase_matrix_hypre.h  pase_mg_solver.h  pase_multigrid.h  pase_param.h  pase_vector_hypre.h
lapack-3.4.2/: make.inc
lapack-3.4.2/BLAS/: xblat1c  xblat1d  xblat1s  xblat1z  xblat2c  xblat2d  xblat2s  xblat2z  xblat3c  xblat3d  xblat3s  xblat3z
lapack-3.4.2/INSTALL/: testdlamch  testdsecnd  testieee  testlsame  testsecond  testslamch  testversion
lapack-3.4.2/TESTING/: testing_results.txt  xeigtstc  xeigtstd  xeigtsts  xeigtstz  xlintstc  xlintstd  xlintstds  xlintstrfc  xlintstrfd  xlintstrfs  xlintstrfz  xlintsts  xlintstz  xlintstzc
output/: np20_n2000_bs100_tol8_nsmooth1.1228.104736  np20_n2000_bs100_tol8_nsmooth1.1228.112117  np20_n2000_bs100_tol8_nsmooth1.1228.122149  np2_n2000_bs100_tol8_nsmooth1.1228.145612
output/1226/: 1226.190547.np1_n1000_bs50_tol8_nsmooth1  1226.192246.np20_n1000_bs50_tol8_nsmooth1  np1_n1000_bs50_tol8_nsmooth1.1226.222650  np20_n2000_bs100_tol8_nsmooth1.1226.194730  np20_n2000_bs100_tol8_nsmooth1.1226.223053
output/1227/: np1_n2000_bs100_tol8_nsmooth1.1227.105632  np1_n2000_bs100_tol8_nsmooth1.1227.112501  np20_n2000_bs100_tol8_nsmooth1.1227.100106  np20_n2000_bs100_tol8_nsmooth1.1227.100744  np20_n2000_bs100_tol8_nsmooth1.1227.103247  np20_n2000_bs100_tol8_nsmooth1.1227.105957  np20_n2000_bs100_tol8_nsmooth1.1227.142759  np20_n2000_bs100_tol8_nsmooth1.1227.230236
output/1228/: np1_n2000_bs100_tol8_nsmooth1.1228.142309  np20_n2000_bs100_tol8_nsmooth1.1228.102628  np20_n2000_bs100_tol8_nsmooth1.1228.115125  np20_n2000_bs100_tol8_nsmooth1.1228.133503
output/1229/: np1_n1000_bs1_tol8_nsmooth1.1229.152832  np1_n1000_bs1_tol8_nsmooth1.1229.153153  np1_n1000_bs50_tol8_nsmooth1.1229.152338
output/before1900/: 1226.153056.np1_n1000_bs50_tol8_nsmooth1  1226.153758.np20_n1000_bs50_tol8_nsmooth1  1226.154236.np20_n1000_bs50_tol8_nsmooth1  1226.173051.np20_n1000_bs50_tol8_nsmooth1  1226.173356.np1_n1000_bs50_tol8_nsmooth1  np10_n1000_bs50_tol8_nsmooth1  np1_n1000_bs50_tol8_nsmooth1  np20_n1000_bs50_tol8_nsmooth1
output/np1_bs1_tol8_nsmooth1/: np1_n1000_bs1_tol8_nsmooth1.1229.153717  np1_n1200_bs1_tol8_nsmooth1.1229.153722  np1_n1400_bs1_tol8_nsmooth1.1229.153729  np1_n1600_bs1_tol8_nsmooth1.1229.153742  np1_n1800_bs1_tol8_nsmooth1.1229.153755  np1_n2000_bs1_tol8_nsmooth1.1229.153812  np1_n200_bs1_tol8_nsmooth1.1229.153711  np1_n2200_bs1_tol8_nsmooth1.1229.153832  np1_n400_bs1_tol8_nsmooth1.1229.153711  np1_n600_bs1_tol8_nsmooth1.1229.153712  np1_n800_bs1_tol8_nsmooth1.1229.153714
output/np1_bs1_tol8_nsmooth1_mincoarse500/: np1_n1000_bs1_tol8_nsmooth1.1229.163428  np1_n1200_bs1_tol8_nsmooth1.1229.163433  np1_n1400_bs1_tol8_nsmooth1.1229.163440  np1_n1600_bs1_tol8_nsmooth1.1229.163453  np1_n1800_bs1_tol8_nsmooth1.1229.163506  np1_n2000_bs1_tol8_nsmooth1.1229.163523  np1_n200_bs1_tol8_nsmooth1.1229.163422  (+4 more)
source/: CMakeLists.txt  Makefile  pase_aux_matrix.c  pase_aux_matrix.h  pase_aux_vector.c  pase_aux_vector.h  pase_config.c  pase_config.h  pase_gcg.c  pase_gcg.h  pase_lobpcg_hypre.c  pase_matrix.c  pase_matrix.h  pase_matrix_hypre.c  pase_matrix_hypre.h  pase_mg_solver.c  pase_mg_solver.h  pase_mg_solver_hypre.c  pase_mg_solver_hypre.h  pase_multigrid.c  pase_multigrid.h  pase_multigrid_hypre.c  pase_multigrid_hypre.h  pase_param.h  pase_pcg_hypre.h  pase_vector.c  pase_vector.h  pase_vector_hypre.h
test/: Makefile  job_lobpcg.sh  matrix_test  matrix_test.c  parMG.c  vector_test  vector_test.c
(+55 files in other folders)
